Changelog
=========

3.3.1 (unreleased)
------------------

- Fixed bug where quickupload didn't remove the active class.
  [lknoepfel]

- Renamed german version of move-items-button.
  [lknoepfel]

- Initialized opengever.sharing version. Moved prepoverlay initialization to opengever.base.
  [lknopfel]

- Added download copy in tooltip.
  [lknoepfel]

- Display document mimetype icons in ContentTreeWidget.
  [phgross]

- Use existing styles for table in tasktemplate view.
  [Julian Infanger]

- Changed default placeholder for searchbox.
  [Julian Infanger]

- Removed unused yearfolder workflow.
  [lknoepfel]

- Fixed table display in add-tasktemplate form.
  [phgross]

- Fixed widget definition for date fields in tasks edit form.
  [phgross]

- Added viewlet to colorize special pages as dev, test, ...
  [Julian Infanger]

- Fixed outdated profile versions for og.base:default and og.examplecontent:default.
  [lgraf]

- Added repository.csv to xlsx script.
  [lknoepfel]

- Changed format of examplecontent excel to xlsx.
  [lknoepfel]

- Dossierdetails: Fixed label for the Dossier end.
  [phgross]

- Added reviewer role on admin groups.
  This role ensures that admins can see the menu bar.
  [lknoepfel]

- Inbox: Removed icon from byline.
  [Julian Infanger]

- Refactored some hard to change test data.
  [lgraf]


3.3 (2014-06-05)
----------------

- Added initial implementation for setting DocProperties when creating
  a document from template.
  [lgraf]

- Fixed zipexport-enable upgrade step to match the new registry entry.
  With ftw.zipexport 1.2.0 the registry name changes which brakes our upgrade step.
  [lknoepfel]

- Added responsible org field on repositoryfolder.
  [lknoepfel]

- Treeportlet: Enable scrolling in the portlet and scroll down to selected item.
  [Julian Infanger]

- Changed source for repository import: from csv to xls.
  [lknoepfel]

- Byline: Removed icon from byline.
  [Julian Infanger]

- Fixed interface in dossiers ConstrainTypeDecider.