@@ -4,6 +4,9 @@ Changelog
 3.3.1 (unreleased)
 ------------------
 
+- Moved time column in journal tab to the far left.
+  [lknoepfel]
+
 - Fixed bug where quickupload didn't remove the active class.
   [lknoepfel]
 
